--- a/bank_app/templates/bank_app/accounts.html
+++ b/bank_app/templates/bank_app/accounts.html
@@ -85,6 +85,67 @@
                 {% endfor %}
             </table>
         </section>
+        <section id="loans_overview">
+            <h3>Manage loans for {{ customer.user.username }}</h3>
+            <table>
+                <tr>
+                    <th></th>
+                    <th>Bank Account</th>
+                    <th>Loan Amount</th>
+                    <th>Amount to Pay</th>
+                    <th>Accept/Decline</th>
+                </tr>
+
+                {% for l in loans %}
+                {% if forloop.counter|divisibleby:2 %}
+                    <tr class="white_bg">
+                {% else %}  
+                    <tr>
+                {% endif %}
+               
+                    <form method="POST">
+                        {% csrf_token %}
+                            <input type="hidden" name="pk" value="{{ l.pk }}">
+							<input type="hidden" name="to_laccount" value="{{ l.account }}">
+                            <input type="hidden" name="loan_amount" value="{{ l.loanAmount }}">
+                            <input type="hidden" name="pkcust" value="{{ customer.pk }}">
+                            <td>{{ forloop.counter }}</td>
+                            <td>{{ l.account }}</td>
+                            <td>{{ l.loanAmount }}</td>
+                            <td>{{ l.remainingAmount }}</td>
+                            {% if l.confirmed == 'true' %}
+                                {% if l.remainingAmount == 0 %}
+                                    <td>Completed</td>
+                                    <td>
+                                        <button formaction="{% url 'bank_app:del_loan' %}" class="icon_btn del_btn">
+                                            <i class="fa-solid fa-trash"></i>
+                                        </button>
+                                    </td>
+                                {% else %}
+                                    <td>Active</td>
+                                {% endif %}
+                            {% elif l.confirmed == 'false'%}
+                                <td>Declined</td>
+                                <td>
+                                    <button formaction="{% url 'bank_app:del_loan' %}" class="icon_btn del_btn">
+                                        <i class="fa-solid fa-trash"></i>
+                                    </button>
+                                </td>
+                            {% else %}
+                                <td>
+                                    <button formaction="{% url 'bank_app:accept_loan' %}" class="simple_btn">
+                                        Accept
+                                    </button>
+                                    <button formaction="{% url 'bank_app:decline_loan' %}" class="simple_btn">
+                                        Decline
+                                    </button>
+                                </td>
+                            {% endif %}
+                    </form>
+                </tr>
+                {% endfor %}
+            </table>
+        </section>
     </main>
 
         <!-- 
