--- a/bank_app/templates/bank_app/index.html
+++ b/bank_app/templates/bank_app/index.html
@@ -176,8 +176,8 @@
 								</td>
 								<td>
 									{% if active_customer.ranking.loan == True %}
-										<input type="number" placeholder="Amount to loan">
-										<button formaction="{% url 'bank_app:del_account' %}" class="simple_btn">
+										<input type="number" name="loan_amount" placeholder="Amount to loan">
+										<button formaction="{% url 'bank_app:request_loan' %}" class="simple_btn">
 											Request
 										</button>
 									{% else %}
@@ -188,6 +188,57 @@
 									<button formaction="{% url 'bank_app:show_movements' %}" class="btn">Show movements</button>
 								</td>
 						</form>
+					</tr>
+					{% endfor %}
+				</table>
+			</section>
+
+			<section id="loans_overview">
+                <h3>{{ request.user.username }}'s loans overview</h3>
+                <table>
+                    <tr>
+                        <th></th>
+                        <th>Bank Account</th>
+                        <th>Loan Amount</th>
+                        <th>Amount to Pay</th>
+                        <th>Make a Payment</th>
+                    </tr>
+ 
+                    {% for l in loans %}
+                    {% if forloop.counter|divisibleby:2 %}
+                        <tr class="white_bg">
+                    {% else %}  
+                        <tr>
+                    {% endif %}
+                   
+                        <form method="POST">
+                            {% csrf_token %}
+                                <input type="hidden" name="pk" value="{{ l.pk }}">
+								<input type="hidden" name="account" value="{{ l.account }}">
+								<input type="hidden" name="remaining_amount" value="{{ l.remainingAmount }}">
+								<!-- <input type="hidden" name="cpk" value="{{ c.pk }}"> -->
+                                <td>{{ forloop.counter }}</td>
+                                <td>{{ l.account }}</td>
+                                <td>{{ l.loanAmount }}</td>
+                                <td>{{ l.remainingAmount }}</td>
+								<!-- nefunguje -->
+								{% if l.confirmed == 'true' %}
+									{% if l.remainingAmount == 0 %}
+										<td>Completed</td>
+									{% else %}
+										<td>
+											<input type="number" name="loan_transfer" placeholder="Amount to transfer">
+												<button formaction="{% url 'bank_app:pay_loan' %}" class="simple_btn">
+													Pay
+												</button>
+										</td>
+									{% endif %}
+								{% elif l.confirmed == 'false'%}
+									<td>Loan declined</td>
+								{% else %}
+									<td>Confirmation pending</td>
+								{% endif %}
+                        </form>
 					</tr>
 					{% endfor %}
 				</table>
