--- a/bank_app/templates/bank_app/movements.html
+++ b/bank_app/templates/bank_app/movements.html
@@ -21,7 +21,7 @@
 			</div>
 			<div>
                 <a href="{% url 'bank_app:index' %}" class="home_btn"><i class="fa-solid fa-house"></i></a>
-                <a href="{% url 'bank_app:logout' %}" class="border_btn" id="logout">Logout</a>
+                <a href="{% url 'login_app:logout' %}" class="border_btn" id="logout">Logout</a>
             </div>
 		</section>
 	</header>
