--- a/bank_app/static/css/style.css
+++ b/bank_app/static/css/style.css
@@ -153,7 +153,7 @@ header p{
     margin: 2rem 2rem;
 }
 
-#automatic_payment_wrapper.form_item_wrapper{
+#automatic_payment_wrapper{
     flex-direction: row;
     align-content: center;
     align-items: center;
