--- a/bank_app/templates/bank_app/accounts.html
+++ b/bank_app/templates/bank_app/accounts.html
@@ -106,7 +106,7 @@
                     <form method="POST">
                         {% csrf_token %}
                             <input type="hidden" name="pk" value="{{ l.pk }}">
-							<input type="hidden" name="to_laccount" value="{{ l.account }}">
+							<input type="hidden" name="to_account" value="{{ l.account }}">
                             <input type="hidden" name="loan_amount" value="{{ l.loanAmount }}">
                             <input type="hidden" name="pkcust" value="{{ customer.pk }}">
                             <td>{{ forloop.counter }}</td>
