--- a/bank_app/templates/bank_app/movements.html
+++ b/bank_app/templates/bank_app/movements.html
@@ -3,10 +3,12 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="description" content="Bank app" />
+	<meta name="keywords" content="bank, money, transaction, payment, loan" />
 	<script src="https://kit.fontawesome.com/b08a3acf90.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="{% static 'css/style.css' %}">
+	<link rel="stylesheet" href="{% static 'css/style.css' %}" />
 
 	<title>Bank</title>
 	</head>
